Correção de Projeto

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 body { 
-    background-image: url("/src/images/img.background.png");
+    background-image: url("../images/img.background.png");
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
